--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
-<html>
-    <body>
-        <h1>HALO WORLD!</h1>
-        <h2>Wira Ganteng</h2>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Abid, Wira, dan Satya</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1 class="title">Meet the Team</h1>
+        <div class="card" id="abid">
+            <h2>Abid</h2>
+        </div>
+        <div class="card" id="wira">
+            <h2>Wira</h2>
+        </div>
+        <div class="card" id="satya">
+            <h2>Satya</h2>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
